project(bulletopengl)
cmake_minimum_required(VERSION 2.8)
include_directories(/usr/include/bullet)
add_definitions("-std=c++11")
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries (${PROJECT_NAME} GL GLU glut  BulletDynamics BulletCollision LinearMath)
